feat: support user renaming and log dealing
